--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
-    "picpay": "^1.0.0",
     "typeorm": "^0.2.29",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.8",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
