Rota de notificacao criada, permitindo ao Picpay avisar que o status do pedido mudou. Ainda e possivel utilizar diferentes token, um para cada vendedor, caso isso seja de alguma forma permitido pelo Picpay e para isso bastaria utilizar as entities [Vendedor] e [Empresa] ao inves de utilizar os token do arquivo .env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,22 @@
 version: '3.1'
 
 services:
-  picpay_postgres:
-    image: postgres
-    ports:
-      - '5432:5432'
-    restart: 'always'
-    environment:
-      POSTGRES_PASSWORD: docker1234
+   picpay_postgres:
+      image: postgres
+      ports:
+         - '5432:5432'
+      restart: 'always'
+      environment:
+         POSTGRES_PASSWORD: docker1234
+
+   # picpay_dyndns_client:
+   #    build:
+   #       context: ./docker
+   #       dockerfile: dyndns.Dockerfile
+   #    container_name: dyndnsclient
+   #    volumes:
+   #       - /etc/localtime:/etc/localtime:ro
+   #       - ./docker/volume/dyndns_config/:/config
+   #    env_file: ./docker/dyndns.env         
+   #    restart: always
 
